--- a/styles.css
+++ b/styles.css
@@ -1,67 +1,109 @@
 body {
-  background-color: rgb(30, 26, 26);
+  background-color: rgb(218, 246, 252);
   font-family: "Roboto", sans-serif;
+  color: rgb(39, 37, 37);
+}
+
+h1 {
+  text-align: center;
+  margin-top: 1rem;
+  margin-bottom: -1.5rem;
+}
+
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 form {
-  background-color: white;
+  background-color: rgb(252, 254, 255);
   width: 30rem;
   margin: 3rem auto;
   padding: 1rem;
   border-radius: 6px;
+  font-size: 0.75rem;
+  border: 3px solid rgba(58, 58, 59, 0.1);
 }
 
 label {
   display: block;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.4rem;
   cursor: pointer;
 }
 
-input, textarea,select {
+input,
+textarea,
+select {
   width: 100%;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   padding: 0.25rem;
   display: block;
   box-sizing: border-box;
   font: inherit;
   color: rgb(39, 37, 37);
-  border: 2px solid rgb(201, 209, 213);
+  border: 1px solid rgb(201, 209, 213);
+  border-radius: 3px;
+  resize: none;
 }
 
 input:focus,
 textarea:focus {
   outline: none;
-  background-color: rgb(206, 169, 241);
-  color: blueviolet;
-  border-color: blueviolet;
+  background-color: rgb(169, 236, 241);
+  color: rgb(121, 131, 132);
+  border-color: rgb(121, 131, 132);
+  border-radius: 3px;
+}
+
+.feedback{
+  margin-bottom: 1rem;
+}
+
+.responce,
+.accept-terms {
+  display: flex;
+}
+
+.responce input,
+.accept-terms input {
+  width: auto;
+  margin-left: 0.5rem;
+  margin-bottom: 0;
+}
+
+.responce label,
+.accept-terms label {
+  margin-left: 1rem;
+  margin-bottom: 0;
+}
+
+.btns {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  margin-bottom: 0.5rem;
 }
 
 button {
   cursor: pointer;
   display: block;
   margin-top: 1rem;
-  padding: 0.25rem 0.5rem;
+  margin-left: 0.3rem;
+  padding: 0.3rem 1rem;
   font: inherit;
   color: rgb(247, 233, 247);
-  background-color: blueviolet;
-  border: 2px solid rgb(93, 32, 93);
+  background-color: rgb(56, 61, 67);
+  border: 1px solid rgba(58, 58, 59, 0.1);
+  border-radius: 4px;
+}
+
+#clear-btn {
+  background-color: rgb(252, 254, 255);
+  color: rgb(58, 58, 59);
 }
 
 button:hover {
-  
-  background-color: rgb(210, 59, 210);
-  border-color: blueviolet;
-}
-
-.verify-input{
-  display: flex;
-}
-
-.verify-input input{
-  width: auto;
-  margin-left: 0.5rem;
-}
-
-.verify-input label{
-  margin-left: 1rem;
+  background-color: rgb(97, 213, 252);
+  border-color: rgb(199, 199, 199);
 }
